back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy
  labels:
    app: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      serviceAccountName: postgres-sa
      containers:
      - name: back
        image: docker.io/skachan/back:latest
        imagePullPolicy: IfNotPresent
        resources:
         limits:
           cpu: 700m
         requests:
           cpu: 300m
        livenessProbe:
          tcpSocket:
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 5
