front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      serviceAccountName: postgres-sa
      containers:
      - name: front
        image: skachan/front:2
        imagePullPolicy: IfNotPresent
