grafana.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: grafana
  name: "grafana-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "grafana"
  template:
    metadata:
      labels:
        app: "grafana"
    spec:
      containers:
      - image: "grafana/grafana"
        imagePullPolicy: "IfNotPresent"
        name: "grafana-deployment"
        ports:
        - containerPort: 3000
          protocol: "TCP"
        securityContext:
          runAsUser: 0
        volumeMounts:
        - name: grafanadat-storage
          mountPath: /var/lib/grafana
        - name: grafanalog-storage
          mountPath: /var/log/grafana
      volumes:
      - name: grafanadat-storage
        persistentVolumeClaim:
          claimName: grafanadat-pv-claim
      - name: grafanalog-storage
        persistentVolumeClaim:
          claimName: grafanalog-pv-claim
