postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      serviceAccountName: postgres-sa
      containers:
      - name: dbpod
        image: postgres:15
        ports:
        - containerPort: 5432
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec pg_isready -d $POSTGRES_DB -U "$POSTGRES_USER"
        volumeMounts:
        - name: postgres-database-storage
          mountPath: /temp/data
        imagePullPolicy: IfNotPresent
      - name: "exporter"
        image: "bitnami/postgres-exporter"
      volumes:
      - name: postgres-database-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
      - name: data
        emptyDir: {}
