prometheus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deploy
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: postgres-sa
      containers:
      - name: prometheus
        image: prom/prometheus
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name:  prometheus
            mountPath:  /etc/prometheus
      volumes:
        - name: prometheus
          configMap:
            name: prometheus
