network.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - port: 5432
    name: port1
    targetPort: 5432
  selector:
    app: db
---
apiVersion: v1
kind: Service
metadata:
  name: dbheadless
spec:
  clusterIP: None
  ports:
  - port: 9187
    name: exporter
    protocol: "TCP"
    targetPort: 9187
  selector:
    app: db
---
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: NodePort
  ports:
  - port: 3002
    targetPort: 3002
    nodePort: 32000
  selector:
    app: front
---
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  type: NodePort
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 32001
  selector:
    app: back
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 32005
  selector:
    app: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 32006
  selector:
    app: grafana
