route.yml
apiVersion: v1
kind: Route
metadata:
  name: front
spec:
  port:
    targetPort: 3002
  to:
    kind: Service
    name: front
